linked list with junit4 tests