@@ -1,12 +1,12 @@
 package ru.maxkharitonov.lists;
 
-import junit.framework.TestCase;
 import org.junit.After;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.Assert.*;
 
@@ -18,7 +18,7 @@ public class MyLinkedListTest {
     private MyLinkedList <String> ls;
 
     @Before
-    private void init() {
+    public void init() {
         a = new ArrayList<Integer>();
         l = new MyLinkedList<Integer>();
 
@@ -27,7 +27,7 @@ public class MyLinkedListTest {
     }
 
     @After
-    private void afterTest() {
+    public void afterTest() {
         a = null;
         l = null;
         s = null;
@@ -36,245 +36,517 @@ public class MyLinkedListTest {
 
     @Test
     public void add() {
+        String m = "row ";
         for (int i = 0; i < 5; i++) {
             a.add(i);
             l.add(i);
-        }
-        MyLinkedList.MyLListIter liter = l.new MyLListIter();
-        for (Integer elem:a) assertEquals(elem, liter.next());
-
-
-        for (int i = 0; i < 5; i++) {
-            try {
-                Assert.assertEquals(a.get(i), l.get(i));
-            } catch (MyListIsEmptyException | MyListIndexException e) {
-                e.printStackTrace();
-            }
-        }
-
-        String m = "row ";
-        for (int i = 0; i < 5; i++) {
             s.add(m + i);
             ls.add(m + i);
         }
+        MyLinkedList<Integer>.MyLListIter liter = l.new MyLListIter();
+        for (Integer elem:a) assertEquals(elem, liter.next());
+
         for (int i = 0; i < 5; i++) {
             try {
-                Assert.assertEquals(s.get(i), ls.get(i));
+                assertEquals(s.get(i), ls.get(i));
             } catch (MyListIsEmptyException | MyListIndexException e) {
-                e.printStackTrace();
+                fail();
             }
         }
     }
 
     @Test
-    public void addLast() {
+    public void add2() {
+        String m = "row ";
         for (int i = 0; i < 5; i++) {
+            a.add(i);
+            l.add(i);
+            s.add(m + i);
+            ls.add(m + i);
+        }
+        a.add(3, 10);
+        s.add(3, m + 10);
+        try {
+            ls.add(9, m + 10);
+        } catch (MyListIndexException e) {
+            assertEquals("MyListException occurred: index is out of range", e.toString());
+        }
+        try {
+            l.add(5, 10);
+        } catch (MyListIndexException e) {
+            assertEquals("MyListException occurred: index is out of range", e.toString());
+        }
+        try {
+            l.add(3, 10);
+            ls.add(3, m + 10);
+        } catch (MyListIndexException e) {
+            fail();
+        }
+        try {
+            assertEquals(a.get(3), l.get(3));
+            assertEquals(s.get(3), ls.get(3));
+        } catch (MyListIsEmptyException | MyListIndexException e) {
+            fail();
+        }
+    }
+
+    @Test
+    public void addLast() {
+        String m = "row ";
+        for (int i = 0; i < 5; i++) {
+            s.add(m + i);
+            ls.addLast(m + i);
             a.add(i);
             l.addLast(i);
         }
         for (int i = 0; i < 5; i++) {
             try {
-                Assert.assertEquals(a.get(i), l.get(i));
+                assertEquals(a.get(i), l.get(i));
+                assertEquals(s.get(i), ls.get(i));
             } catch (MyListIsEmptyException | MyListIndexException e) {
-                e.printStackTrace();
-            }
-        }
-
-        String m = "row ";
-        for (int i = 0; i < 5; i++) {
-            s.add(m + i);
-            ls.addLast(m + i);
-        }
-        for (int i = 0; i < 5; i++) {
-            try {
-                Assert.assertEquals(s.get(i), ls.get(i));
-            } catch (MyListIsEmptyException | MyListIndexException e) {
-                e.printStackTrace();
+                fail();
             }
         }
     }
 
     @Test
     public void addFirst() {
+        String m = "row ";
         for (int i = 0; i < 5; i++) {
+            s.add(0, m + i);
+            ls.addFirst(m + i);
             a.add(0, i);
             l.addFirst(i);
         }
         for (int i = 0; i < 5; i++) {
             try {
-                Assert.assertEquals(a.get(i), l.get(i));
+                assertEquals(a.get(i), l.get(i));
+                assertEquals(s.get(i), ls.get(i));
             } catch (MyListIsEmptyException | MyListIndexException e) {
-                e.printStackTrace();
-            }
-        }
-
-        String m = "row ";
-        for (int i = 0; i < 5; i++) {
-            s.add(0, m + i);
-            ls.addFirst(m + i);
-        }
-        for (int i = 0; i < 5; i++) {
-            try {
-                Assert.assertEquals(s.get(i), ls.get(i));
-            } catch (MyListIsEmptyException | MyListIndexException e) {
-                e.printStackTrace();
+                fail();
             }
         }
     }
 
     @Test
     public void get() {
+        try {
+            l.get(2);
+        } catch (MyListIsEmptyException e) {
+            assertEquals("MyListException occurred: list is empty", e.toString());
+        } catch (MyListIndexException e) {
+            fail();
+        }
+        try {
+            ls.get(2);
+        } catch (MyListIsEmptyException e) {
+            assertEquals("MyListException occurred: list is empty", e.toString());
+        } catch (MyListIndexException e) {
+            fail();
+        }
+        String m = "row ";
         for (int i = 0; i < 5; i++) {
+            s.add(m + i);
+            ls.add(m + i);
             a.add(i);
             l.add(i);
         }
         for (int i = 0; i < 5; i++) {
             try {
-                Assert.assertEquals(a.get(i), l.get(i));
+                assertEquals(a.get(i), l.get(i));
+                assertEquals(s.get(i), ls.get(i));
             } catch (MyListIsEmptyException | MyListIndexException e) {
-                e.printStackTrace();
+                fail();
             }
         }
-
-        String m = "row ";
-        for (int i = 0; i < 5; i++) {
-            s.add(m + i);
-            ls.add(m + i);
+        try {
+            l.get(7);
+        } catch (MyListIsEmptyException e) {
+            fail();
+        } catch (MyListIndexException e) {
+            assertEquals("MyListException occurred: index is out of range", e.toString());
         }
-        for (int i = 0; i < 5; i++) {
-            try {
-                Assert.assertEquals(s.get(i), ls.get(i));
-            } catch (MyListIsEmptyException | MyListIndexException e) {
-                e.printStackTrace();
-            }
+        try {
+            ls.get(7);
+        } catch (MyListIsEmptyException e) {
+            fail();
+        } catch (MyListIndexException e) {
+            assertEquals("MyListException occurred: index is out of range", e.toString());
         }
     }
 
     @Test
     public void getFirst() {
-        for (int i = 0; i < 2; i++) {
-            a.add(i);
-            l.add(i);
+        try {
+            l.getFirst();
+        } catch (MyListIsEmptyException e) {
+            assertEquals("MyListException occurred: list is empty", e.toString());
         }
         try {
-            Assert.assertEquals(a.get(0), l.getFirst());
+            ls.getFirst();
         } catch (MyListIsEmptyException e) {
-            e.printStackTrace();
+            assertEquals("MyListException occurred: list is empty", e.toString());
         }
-
         String m = "row ";
         for (int i = 0; i < 2; i++) {
             s.add(m + i);
             ls.add(m + i);
+            a.add(i);
+            l.add(i);
         }
         try {
-            Assert.assertEquals(s.get(0), ls.getFirst());
+            assertEquals(a.get(0), l.getFirst());
+            assertEquals(s.get(0), ls.getFirst());
         } catch (MyListIsEmptyException e) {
-            e.printStackTrace();
+            fail();
         }
     }
 
     @Test
     public void getLast() {
-        for (int i = 0; i < 2; i++) {
-            a.add(i);
-            l.add(i);
+        try {
+            l.getLast();
+        } catch (MyListIsEmptyException e) {
+            assertEquals("MyListException occurred: list is empty", e.toString());
         }
         try {
-            Assert.assertEquals(a.get(0), l.getFirst());
+            ls.getLast();
         } catch (MyListIsEmptyException e) {
-            e.printStackTrace();
+            assertEquals("MyListException occurred: list is empty", e.toString());
         }
-
         String m = "row ";
         for (int i = 0; i < 2; i++) {
             s.add(m + i);
             ls.add(m + i);
+            a.add(i);
+            l.add(i);
         }
         try {
-            Assert.assertEquals(s.get(0), ls.getFirst());
+            assertEquals(a.get(a.size() - 1), l.getLast());
+            assertEquals(s.get(a.size() - 1), ls.getLast());
         } catch (MyListIsEmptyException e) {
-            e.printStackTrace();
+            fail();
         }
     }
 
     @Test
     public void removeLast() {
+        String m = "row ";
+        try {
+            l.removeLast();
+        } catch (MyListIsEmptyException e) {
+            assertEquals("MyListException occurred: list is empty", e.toString());
+        }
+        try {
+            ls.removeLast();
+        } catch (MyListIsEmptyException e) {
+            assertEquals("MyListException occurred: list is empty", e.toString());
+        }
         for (int i = 0; i < 5; i++) {
             a.add(i);
             l.add(i);
-        }
-        for (int i = 0; i < 5; i++) {
-            try {
-                Assert.assertEquals(a.remove(a.size()), l.removeLast());
-            } catch (MyListIsEmptyException e) {
-                e.printStackTrace();
-            }
-        }
-
-        String m = "row ";
-        for (int i = 0; i < 5; i++) {
             s.add(m + i);
             ls.add(m + i);
         }
         for (int i = 0; i < 5; i++) {
             try {
-                Assert.assertEquals(s.remove(s.size()), ls.removeLast());
+                assertEquals(a.remove(a.size() - 1), l.removeLast());
+                assertEquals(s.remove(s.size() - 1), ls.removeLast());
             } catch (MyListIsEmptyException e) {
-                e.printStackTrace();
+                fail();
             }
         }
     }
 
     @Test
     public void removeFirst() {
+        String m = "row ";
+        try {
+            l.removeFirst();
+        } catch (MyListIsEmptyException e) {
+            assertEquals("MyListException occurred: list is empty", e.toString());
+        }
+        try {
+            ls.removeFirst();
+        } catch (MyListIsEmptyException e) {
+            assertEquals("MyListException occurred: list is empty", e.toString());
+        }
         for (int i = 0; i < 5; i++) {
             a.add(i);
             l.add(i);
-        }
-        for (int i = 0; i < 5; i++) {
-            try {
-                Assert.assertEquals(a.remove(a.size()), l.removeLast());
-            } catch (MyListIsEmptyException e) {
-                e.printStackTrace();
-            }
-        }
-
-        String m = "row ";
-        for (int i = 0; i < 5; i++) {
             s.add(m + i);
             ls.add(m + i);
         }
-        try {
-            Assert.assertEquals(s.remove(0), ls.removeFirst());
-        } catch (MyListIsEmptyException e) {
-            e.printStackTrace();
+        for (int i = 0; i < 5; i++) {
+            try {
+                assertEquals(a.remove(0), l.removeFirst());
+                assertEquals(s.remove(0), ls.removeFirst());
+            } catch (MyListIsEmptyException e) {
+                fail();
+            }
         }
     }
 
     @Test
     public void removeAt() {
+        String m = "row ";
+        try {
+            l.removeAt(0);
+        } catch (MyListIsEmptyException e) {
+            assertEquals("MyListException occurred: list is empty", e.toString());
+        } catch (MyListIndexException e) {
+            fail();
+        }
+        try {
+            ls.removeAt(5);
+        } catch (MyListIsEmptyException e) {
+            assertEquals("MyListException occurred: list is empty", e.toString());
+        } catch (MyListIndexException e) {
+            fail();
+        }
         for (int i = 0; i < 5; i++) {
             a.add(i);
             l.add(i);
-        }
-        try {
-            Assert.assertEquals(a.remove(4), l.removeAt(4));
-            Assert.assertEquals(a.remove(2), l.removeAt(2));
-        } catch (MyListIsEmptyException | MyListIndexException e) {
-            e.printStackTrace();
-        }
-
-        String m = "row ";
-        for (int i = 0; i < 2; i++) {
             s.add(m + i);
             ls.add(m + i);
         }
         try {
-            Assert.assertEquals(s.remove(4), ls.removeAt(4));
-            Assert.assertEquals(s.remove(2), ls.removeAt(2));
+            l.removeAt(5);
+        } catch (MyListIsEmptyException e) {
+            fail();
+        } catch (MyListIndexException e) {
+            assertEquals("MyListException occurred: index is out of range", e.toString());
+        }
+        try {
+            ls.removeAt(5);
+        } catch (MyListIsEmptyException e) {
+            fail();
+        } catch (MyListIndexException e) {
+            assertEquals("MyListException occurred: index is out of range", e.toString());
+        }
+        try {
+            assertEquals(a.remove(4), l.removeAt(4));
+            assertEquals(a.remove(2), l.removeAt(2));
+            assertEquals(s.remove(4), ls.removeAt(4));
+            assertEquals(s.remove(2), ls.removeAt(2));
         } catch (MyListIsEmptyException | MyListIndexException e) {
-            e.printStackTrace();
+            fail();
+        }
+    }
+
+    @Test
+    public void remove() {
+        String m = "row ";
+        for (int i = 0; i < 5; i++) {
+            a.add(i);
+            l.add(i);
+            s.add(m + i);
+            ls.add(m + i);
+        }
+        try {
+            assertEquals(4, (int) l.remove(4));
+            assertEquals(0, (int) l.remove(0));
+            assertEquals("row 1", ls.remove("row 1"));
+            assertEquals("row 3", ls.remove("row 3"));
+            try {
+                assertEquals(0, (int) l.remove(0));
+            } catch (MyListElementNotFoundException e) {
+                assertEquals("MyListException occurred: element not found", e.toString());
+            }
+            try {
+                assertNotEquals(-4, (int) l.remove(-4));
+            } catch (MyListElementNotFoundException e) {
+                assertEquals("MyListException occurred: element not found", e.toString());
+            }
+            try {
+                assertNull(ls.remove("row 1"));
+            } catch (MyListElementNotFoundException e) {
+                assertEquals("MyListException occurred: element not found", e.toString());
+            }
+            try {
+                assertNull(ls.remove("row 5"));
+            } catch (MyListElementNotFoundException e) {
+                assertEquals("MyListException occurred: element not found", e.toString());
+            }
+        } catch (MyListIsEmptyException | MyListElementNotFoundException e) {
+            fail();
+        }
+    }
+
+    @Test
+    public void clear() {
+        String m = "row ";
+        for (int i = 0; i < 5; i++) {
+            l.add(i);
+            ls.add(m + i);
+        }
+        try {
+            l.clear();
+            ls.clear();
+        } catch (MyListIsEmptyException e) {
+            fail();
+        }
+        assertEquals(0, l.getSize());
+        assertEquals(0, ls.getSize());
+        try {
+            l.clear();
+        } catch (MyListIsEmptyException e) {
+            assertEquals("MyListException occurred: list is empty", e.toString());
+        }
+        try {
+            ls.clear();
+        } catch (MyListIsEmptyException e) {
+            assertEquals("MyListException occurred: list is empty", e.toString());
+        }
+    }
+
+    @Test
+    public void getSize() {
+        String m = "row ";
+        for (int i = 0; i < 5; i++) {
+            l.add(i);
+            ls.add(m + i);
+        }
+        assertEquals(5, l.getSize());
+        assertEquals(5, ls.getSize());
+
+    }
+
+    @Test
+    public void addCollection() {
+        int i = 0;
+        List<Integer> list = Arrays.asList(9,8,7,6);
+        List<String> slist = Arrays.asList("row 9","row 8","row 7","row 6");
+        l.addCollection(list);
+        ls.addCollection(slist);
+        MyLinkedList<Integer>.MyLListIter liter = l.new MyLListIter();
+        MyLinkedList<String>.MyLListIter lsiter = ls.new MyLListIter();
+        while (i < list.size()) {
+            assertEquals(list.get(i), liter.next());
+            assertEquals(slist.get(i), lsiter.next());
+            i++;
+        }
+        try {
+            l.addCollection(null);
+        } catch (NullPointerException e) {
+            assertNotEquals("", e.getMessage());
+        }
+        try {
+            ls.addCollection(null);
+        } catch (NullPointerException e) {
+            assertNotEquals("", e.getMessage());
+        }
+    }
+
+    @Test
+    public void removeCollection() {
+        try {
+            ls.removeCollection(Arrays.asList("row 1", "row 2"));
+        } catch (MyListIsEmptyException e) {
+            assertEquals("MyListException occurred: list is empty", e.toString());
+        } catch (MyListElementNotFoundException e) {
+            fail();
+        }
+        try {
+            l.removeCollection(Arrays.asList(1, 2));
+        } catch (MyListIsEmptyException e) {
+            assertEquals("MyListException occurred: list is empty", e.toString());
+        } catch (MyListElementNotFoundException e) {
+            fail();
+        }
+        int i = 0;
+        List<Integer> list = Arrays.asList(9,8,7,6);
+        List<String> slist = Arrays.asList("row 9","row 8","row 7","row 6");
+        List<Integer> rlist = Arrays.asList(8,6);
+        List<String> rslist = Arrays.asList("row 8","row 6");
+        l.addCollection(list);
+        ls.addCollection(slist);
+        try {
+            ls.removeCollection(Arrays.asList("row 1", "row 2"));
+        } catch (MyListIsEmptyException e) {
+            fail();
+        } catch (MyListElementNotFoundException e) {
+            assertEquals("MyListException occurred: element not found", e.toString());
+        }
+        try {
+            l.removeCollection(Arrays.asList(1, 2));
+        } catch (MyListIsEmptyException e) {
+            fail();
+        } catch (MyListElementNotFoundException e) {
+            assertEquals("MyListException occurred: element not found", e.toString());
+        }
+        try {
+            l.removeCollection(rlist);
+            ls.removeCollection(rslist);
+        } catch (MyListIsEmptyException | MyListElementNotFoundException e) {
+            fail();
+        }
+        try {
+            assertEquals(9, (int) l.get(0));
+            assertEquals(7, (int) l.get(1));
+            assertEquals("row 9", ls.get(0));
+            assertEquals("row 7", ls.get(1));
+            assertNotEquals(8, (int) l.get(1));
+            assertNotEquals("row 8", ls.get(1));
+        } catch (MyListIsEmptyException | MyListIndexException e) {
+            fail();
+        }
+        try {
+            l.removeCollection(null);
+        } catch (NullPointerException e) {
+            assertNotEquals("", e.getMessage());
+        } catch (MyListIsEmptyException | MyListElementNotFoundException e) {
+            fail();
+        }
+        try {
+            ls.removeCollection(null);
+        } catch (NullPointerException e) {
+            assertNotEquals("", e.getMessage());
+        } catch (MyListIsEmptyException | MyListElementNotFoundException e) {
+            fail();
+        }
+    }
+
+    @Test
+    public void contains() {
+        List<Integer> list = Arrays.asList(9,8,7,6);
+        List<String> slist = Arrays.asList("row 9","row 8","row 7","row 6");
+        l.addCollection(list);
+        ls.addCollection(slist);
+        assertTrue(l.contains(8));
+        assertTrue(l.contains(6));
+        assertTrue(l.contains(9));
+        assertFalse(l.contains(10));
+        assertFalse(l.contains(1));
+        assertTrue(ls.contains("row 8"));
+        assertTrue(ls.contains("row 7"));
+        assertTrue(ls.contains("row 9"));
+        assertFalse(ls.contains("row 10"));
+        assertFalse(ls.contains("row 1"));
+    }
+
+    @Test
+    public void iterator() {
+        String m = "row ";
+        for (int i = 0; i < 5; i++) {
+            a.add(i);
+            l.add(i);
+            s.add(m + i);
+            ls.add(m + i);
+        }
+        MyLinkedList<Integer>.MyLListIter liter = l.new MyLListIter();
+        MyLinkedList<String>.MyLListIter lsiter = ls.new MyLListIter();
+        for (Integer elem:a) assertEquals(elem, liter.next());
+        for (String elem:s) assertEquals(elem, lsiter.next());
+        int i = 0;
+        for (Object item:l) {
+            assertEquals(i, item);
+            i++;
+        }
+        i = 0;
+        for (Object item:ls) {
+            assertEquals(m + i, item);
+            i++;
         }
     }
 }
